# api/openpay_v1/me.pb.validate.go
@@ -1,0 +1,273 @@
+// Code generated by protoc-gen-validate. DO NOT EDIT.
+// source: proto/openpay/v1/me.proto
+
+package openpay_v1
+
+import (
+	"bytes"
+	"errors"
+	"fmt"
+	"net"
+	"net/mail"
+	"net/url"
+	"regexp"
+	"sort"
+	"strings"
+	"time"
+	"unicode/utf8"
+
+	"google.golang.org/protobuf/types/known/anypb"
+)
+
+// ensure the imports are used
+var (
+	_ = bytes.MinRead
+	_ = errors.New("")
+	_ = fmt.Print
+	_ = utf8.UTFMax
+	_ = (*regexp.Regexp)(nil)
+	_ = (*strings.Reader)(nil)
+	_ = net.IPv4len
+	_ = time.Duration(0)
+	_ = (*url.URL)(nil)
+	_ = (*mail.Address)(nil)
+	_ = anypb.Any{}
+	_ = sort.Sort
+)
+
+// Validate checks the field values on GetMeRequest with the rules defined in
+// the proto definition for this message. If any rules are violated, the first
+// error encountered is returned, or nil if there are no violations.
+func (m *GetMeRequest) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on GetMeRequest with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// result is a list of violation errors wrapped in GetMeRequestMultiError, or
+// nil if none found.
+func (m *GetMeRequest) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *GetMeRequest) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	if len(errors) > 0 {
+		return GetMeRequestMultiError(errors)
+	}
+
+	return nil
+}
+
+// GetMeRequestMultiError is an error wrapping multiple validation errors
+// returned by GetMeRequest.ValidateAll() if the designated constraints aren't met.
+type GetMeRequestMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m GetMeRequestMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m GetMeRequestMultiError) AllErrors() []error { return m }
+
+// GetMeRequestValidationError is the validation error returned by
+// GetMeRequest.Validate if the designated constraints aren't met.
+type GetMeRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e GetMeRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e GetMeRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e GetMeRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e GetMeRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e GetMeRequestValidationError) ErrorName() string { return "GetMeRequestValidationError" }
+
+// Error satisfies the builtin error interface
+func (e GetMeRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sGetMeRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = GetMeRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = GetMeRequestValidationError{}
+
+// Validate checks the field values on GetMeResponse with the rules defined in
+// the proto definition for this message. If any rules are violated, the first
+// error encountered is returned, or nil if there are no violations.
+func (m *GetMeResponse) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on GetMeResponse with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// result is a list of violation errors wrapped in GetMeResponseMultiError, or
+// nil if none found.
+func (m *GetMeResponse) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *GetMeResponse) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for UserId
+
+	// no validation rules for ScopeAll
+
+	for idx, item := range m.GetProducts() {
+		_, _ = idx, item
+
+		if all {
+			switch v := interface{}(item).(type) {
+			case interface{ ValidateAll() error }:
+				if err := v.ValidateAll(); err != nil {
+					errors = append(errors, GetMeResponseValidationError{
+						field:  fmt.Sprintf("Products[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			case interface{ Validate() error }:
+				if err := v.Validate(); err != nil {
+					errors = append(errors, GetMeResponseValidationError{
+						field:  fmt.Sprintf("Products[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			}
+		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return GetMeResponseValidationError{
+					field:  fmt.Sprintf("Products[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
+
+	if len(errors) > 0 {
+		return GetMeResponseMultiError(errors)
+	}
+
+	return nil
+}
+
+// GetMeResponseMultiError is an error wrapping multiple validation errors
+// returned by GetMeResponse.ValidateAll() if the designated constraints
+// aren't met.
+type GetMeResponseMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m GetMeResponseMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m GetMeResponseMultiError) AllErrors() []error { return m }
+
+// GetMeResponseValidationError is the validation error returned by
+// GetMeResponse.Validate if the designated constraints aren't met.
+type GetMeResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e GetMeResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e GetMeResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e GetMeResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e GetMeResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e GetMeResponseValidationError) ErrorName() string { return "GetMeResponseValidationError" }
+
+// Error satisfies the builtin error interface
+func (e GetMeResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sGetMeResponse.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = GetMeResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = GetMeResponseValidationError{}
